--- a/b_lin_mul.ipynb
+++ b/b_lin_mul.ipynb
@@ -103,10 +103,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "959d89c0-d2ae-47a6-af2c-2849bf59f7f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_r2 0.9912232864474665\n",
+      "adj_r2   0.9795210017107552\n"
+     ]
+    }
+   ],
    "source": [
     "# R² המתוקנן\n",
     "#                 (1 - R²)(n - 1)\n",
@@ -114,7 +123,18 @@
     "#                    n - p - 1\n",
     "#  n = observations\n",
     "#  p = features\n",
-    "\n"
+    "\n",
+    "# only for training!\n",
+    "def get_adj_r2(train_r2, X_train):\n",
+    "    # i.e. X_train.shape == (8, 4) -> 8 rows 4 features\n",
+    "    n = X_train.shape[0]\n",
+    "    p = X_train.shape[1]\n",
+    "    result = 1 - (1 - train_r2) * (n - 1) / (n - p - 1)\n",
+    "    return result\n",
+    "\n",
+    "print(\"train_r2\", train_r2)\n",
+    "print(\"adj_r2  \", get_adj_r2(train_r2, X_train))\n",
+    "    "
    ]
   }
  ],
